Remove hardcoded dependencies (#29)
* Removed hardcoded dependencies in DockerFile

* Removed hardcoded dependencies in DockerFile

* Removed hardcoded dependencies in DockerFile